get defautl rke config
