# internal/handler/cluster.go
@@ -96,9 +96,8 @@ func (e *ClusterHandler) ListKubernetesClusters(ctx *gin.Context) {
 // 500: body:Reponse
 func (e *ClusterHandler) AddKubernetesCluster(ctx *gin.Context) {
 	var req v1.CreateKubernetesReq
-	if err := ctx.ShouldBindJSON(&req); err != nil {
-		logrus.Errorf("bind body param failure %s", err.Error())
-		ginutil.JSON(ctx, nil, bcode.BadRequest)
+	if err := ginutil.ShouldBindJSON(ctx, &req); err != nil {
+		ginutil.Error(ctx, err)
 		return
 	}
 	if req.Provider == "rke" {
@@ -133,7 +132,7 @@ func (e *ClusterHandler) AddKubernetesCluster(ctx *gin.Context) {
 // @Param updateKubernetesReq body v1.UpdateKubernetesReq true "."
 // @Success 200 {object} v1.UpdateKubernetesTask
 // @Failure 500 {object} ginutil.Result
-// @Router /api/v1/enterprises/:eid//update-cluster [post]
+// @Router /api/v1/enterprises/:eid/update-cluster [post]
 func (e *ClusterHandler) UpdateKubernetesCluster(ctx *gin.Context) {
 	var req v1.UpdateKubernetesReq
 	if err := ginutil.ShouldBindJSON(ctx, &req); err != nil {
@@ -698,4 +697,27 @@ func (e *ClusterHandler) UninstallRegion(ctx *gin.Context) {
 		return
 	}
 	ginutil.JSON(ctx, nil, nil)
+}
+
+// @Summary return a default rke config.
+// @Tags cluster
+// @ID getDefaultRKEConfig
+// @Accept  json
+// @Produce  json
+// @Param eid path string true "the enterprise id"
+// @Param createAppStoreReq body v1.GetDefaultRKEConfigReq true "."
+// @Success 200 {object} v1.GetDefaultRKEConfigResp
+// @Failure 500 {object} ginutil.Result
+// @Router /api/v1/enterprises/:eid/kclusters/default-rkeconfig [get]
+func (e *ClusterHandler) getDefaultRKEConfig(c *gin.Context) {
+	var req v1.GetDefaultRKEConfigReq
+	if c.Request.ContentLength > 0 {
+		if err := ginutil.ShouldBindJSON(c, &req); err != nil {
+			ginutil.Error(c, err)
+			return
+		}
+	}
+
+	rkeConfig, err := e.cluster.GetDefaultRKEConfig(&req)
+	ginutil.JSONv2(c, rkeConfig, err)
 }
